# Heimdall

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  SECURITY-BACKLOG.md  secret-proxy-full-plan.md
.github/actions/setup-heimdall/: action.yml  setup.sh
.github/workflows/: opencode.yml
docs/: README.md  architecture.md  deployment.md  explicit-proxy.md  github-actions.md  local-agent.md  quickstart.md
local-agent/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
local-agent/config/: agent-config.example.yaml  agent-config.yaml
local-agent/src/: agent.rs  config.rs  domain_filter.rs  health.rs  lib.rs  local_proxy.rs  main.rs  sni.rs  state.rs  transparent.rs
local-agent/src/platform/: linux.rs  mod.rs  windivert.rs  windows.rs
local-agent/src/tunnel/: client.rs  mod.rs  multiplexer.rs  protocol.rs
local-agent/tests/: protocol_test.rs  sni_test.rs
local-agent/windivert-sys-patched/: .cargo_vcs_info.json  Cargo.toml  vc140.idb
proxy-server/: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  THIRD_PARTY_LICENSES  package.json  pnpm-lock.yaml  vitest.config.ts
proxy-server/config/: server-config.example.yaml
proxy-server/scripts/: generate-ca.ts  generate-tunnel-cert.ts
proxy-server/src/: index.ts
proxy-server/src/audit/: audit-logger.ts
proxy-server/src/auth/: auth-backend.ts  authenticator.ts  composite-backend.ts  config-backend.ts  db-backend.ts  source-ip.ts
proxy-server/src/config/: loader.ts  schema.ts
proxy-server/src/injection/: injector.ts  scanner.ts
proxy-server/src/panel/: auth.ts  server.ts
proxy-server/src/proxy/: cert-manager.ts  connection-pool.ts  http-parser.ts  mitm.ts  ocsp-response.ts  (+3 more)
proxy-server/tests/: audit-logger.test.ts  authenticator.test.ts  cache.test.ts  cert-manager.test.ts  config.test.ts  domain-matcher.test.ts  env-provider.test.ts  http-parser.test.ts  injector.test.ts  ocsp-response.test.ts  passthrough.test.ts  resolver.test.ts  scanner.test.ts  session-manager.test.ts  tunnel-protocol.test.ts  tunnel-server.test.ts
scripts/demo-runner/: README.md  bootstrap-ubuntu-runner.sh  example.env
(+28 files in other folders)
